Add chapter cross-references

--- a/_output.yml
+++ b/_output.yml
@@ -1,6 +1,7 @@
 bookdown::gitbook:
   lib_dir: "book_assets"
   split_by: section
+  md_extensions: -ascii_identifiers
   config:
     sharing: no
     search: no
