--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
 - chmod +x ./_deploy.sh
 stages:
 - name: test
+  if: branch != master
 - name: deploy
   if: branch = master
 jobs:
@@ -15,4 +16,6 @@ jobs:
   - stage: test
     script: ./_build.sh
   - stage: deploy
-    script: ./_deploy.sh
+    script:
+    - ./_build.sh
+    - ./_deploy.sh
