--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ book:
   - （英）戈登·鲁格 玛丽安·彼得【著】
   - 彭万华【译】 彭凯平【校】
   - 张亮【编】
-  date: 英文版发布于2004年，中文版发布于2009年
+  date: now
   site-url: https://psychelzh.github.io/phdrule/
   repo-url: https://github.com/psychelzh/phdrule
   repo-branch: master
